@@ -303,4 +303,10 @@ phpSysInfo language file Language: Polish Created by: Damian Pasternok
   <expression id="099" name="details">
     <exp>Szczegóły</exp>
   </expression>
+  <expression id="100" name="cpuspeedMax">
+    <exp>Częstotliwość Max</exp>
+  </expression>
+  <expression id="101" name="cpuspeedMin">
+    <exp>Częstotliwość Min</exp>
+  </expression>
 </tns:translation>
