@@ -100,7 +100,21 @@
 
     <complexType name="CpuCore">
     	<attribute name="Model" type="string" use="required"></attribute>
-    	<attribute name="CpuSpeed" use="required">
+    	<attribute name="CpuSpeed" use="optional">
+    		<simpleType>
+    			<restriction base="unsignedLong">
+    				<minInclusive value="0"></minInclusive>
+    			</restriction>
+    		</simpleType>
+    	</attribute>
+    	<attribute name="CpuSpeedMax" use="optional">
+    		<simpleType>
+    			<restriction base="unsignedLong">
+    				<minInclusive value="0"></minInclusive>
+    			</restriction>
+    		</simpleType>
+    	</attribute>
+    	<attribute name="CpuSpeedMin" use="optional">
     		<simpleType>
     			<restriction base="unsignedLong">
     				<minInclusive value="0"></minInclusive>
