@@ -146,8 +146,12 @@ CPU revision	: 5
 Hardware	: SEMC Delta
 Revision	: 0000
 Serial		: 0000000000000000
+---Sat, 11 May 2013 09:44:40 +0000 GMT--- Reading: /sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq
+600000
 ---Sat, 11 May 2013 09:44:40 +0000 GMT--- Reading: /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_max_freq
 600000
+---Sat, 11 May 2013 09:44:40 +0000 GMT--- Reading: /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_min_freq
+245760
 ---Sat, 11 May 2013 09:44:40 +0000 GMT--- Reading: /proc/stat
 cpu  86055 8531 23906 69411 12010 7 103 0 0
 cpu0 86055 8531 23906 69411 12010 7 103 0 0
